# plants-love-rust

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md  Setup  SystemArch.drawio  System_BOM.xlsx
.github/workflows/: ci.yml
firmware/: Cargo.toml  README.md
firmware/.cargo/: config.toml
firmware/config/: config.toml
firmware/src/: config.rs  gpio_example.rs  main.rs  ui.rs
firmware/src/analog/: ads1115.rs  mod.rs
firmware/src/gpio/: intervalgpio.rs  mod.rs  real.rs  schedulegpio.rs  stub.rs
scripts/: deploy.ps1  generate_ssh_key.ps1  generate_ssh_key.sh  id_rsa_plants  id_rsa_plants.pub
