
[package]
name = "plants_love_rust_firmware"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Optional Raspberry Pi GPIO crate (only used when building on the Pi or with the `gpio` feature)
rppal = { version = "0.22", optional = true }
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[features]
# Enable the GPIO example (pulls in `rppal`). Not enabled by default so local builds on Windows succeed.
gpio = ["rppal"]
